float를 응용한 레이아웃 수정

--- a/css/main.css
+++ b/css/main.css
@@ -399,7 +399,7 @@ body{
   background: #ccc linear-gradient(to bottom, #ccc, #eee);
   border: 1px solid #aaa;
   border-radius: 5px;
-  padding: 10px 15px;
+  padding: 15px 15px 10px;
 }
 
 .term-title{
@@ -410,7 +410,6 @@ body{
 }
 
 .term-list{
-  background: aqua;
   margin-top: 10px;
   margin-bottom: 0;
 }
@@ -422,7 +421,6 @@ body{
 }
 
 .term-list-subject{
-  background:pink;
   color: #296897;
   font-weight: 700;
   margin-bottom: 5px;
@@ -434,7 +432,6 @@ body{
 }
 
 .term-list-thumbnail{
-  background: yellow;
   margin-left: 0;
   float: left;
 }
@@ -444,9 +441,20 @@ body{
 }
 
 .term-list-brief{
-  background: lime;
   margin-left: 0;
   line-height: 1.5;
+}
+
+.term-list div{
+  margin-top: 10px;
+}
+.term-list div:nth-of-type(even) .term-list-subject,
+.term-list div:nth-of-type(even) .term-list-brief{
+  float: left;
+}
+
+.term-list div:nth-of-type(even) .term-list-thumbnail{
+  float: right;
 }
 /* 슬로건 */
 .slogan{
