--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,12 @@ a{
   text-decoration: none;
 }
 
+fieldset{
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+
 /* 기본 스타일 */
 body *, body *::before, body *::after{
   box-sizing: border-box;
@@ -281,7 +287,6 @@ body{
   width: 250px;
 }
 .group2{
-  background-color: tan;
   width: 380px;
 }
 .group3{
@@ -315,9 +320,6 @@ body{
 
 .login-form fieldset{
   position: relative;
-  margin: 0;
-  padding: 0 0 5px;
-  border: 0;
   border-bottom: 1px solid #aaa;
 }
 
@@ -456,6 +458,38 @@ body{
 .term-list div:nth-of-type(even) .term-list-thumbnail{
   float: right;
 }
+
+/* 검색 폼 */
+.search-form-wrapper{
+  background: #ccc linear-gradient(to bottom, #ccc, #eee);
+  border: 1px solid #aaa;
+  border-radius: 15px 15px 0 0;
+  padding: 15px 25px 10px;
+  border-bottom-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+[name="search"]{
+  border: 1px solid #aaa;
+  border-radius: 3px;
+  padding: 2px 5px;
+  height: 24px;
+  width: 180px;
+}
+
+.button-search{
+  background: #000;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 2px 10px;
+  height: 24px;
+  border: 0;
+}
+
+
 /* 슬로건 */
 .slogan{
   background-color: pink;
