--- a/css/main.css
+++ b/css/main.css
@@ -496,6 +496,7 @@ body{
 .board{
   position: relative;
   min-height: 165px;
+  margin-bottom: 20px;
 }
 
 .board-tab{
@@ -562,6 +563,67 @@ body{
   color: hsla(110,50%,30%,1);
 }
 
+/* 새소식 */
+.news{
+  position: relative;
+}
+
+.news::before{ 
+  content: "";
+  position: absolute;
+  top: 35px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background: #aaa linear-gradient(to right, #ccc, #fff);
+}
+
+.news-title{
+  margin: 0;
+  font-weight: 700;
+  font-size: 1.5rem;
+  color: #ed552f;
+}
+
+.news-link{
+  display: block;
+}
+
+.news-item{
+  margin-top: 35px;
+  padding-left: 130px;
+  position: relative;
+  min-height: 100px;
+}
+.news-item-title{
+  margin: 0 0 5px 0;
+  font-weight: 700;
+  font-size: 1em;
+}
+
+.news-item-brief{
+  margin: 10px 0 0 0;
+  line-height: 1.5;
+}
+
+.news-item-thumbnail{
+  margin: 0;
+  position: absolute;
+  top: 0;
+  left:0 ;
+  text-align: center;
+}
+.news-item-thumbnail img{
+  box-shadow: 0 15px 15px 0 #ccc;
+  margin-bottom: 15px;
+}
+
+.news-more{
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  padding: 8px;
+}
 /* 슬로건 */
 .slogan{
   background-color: pink;
