웹카페 레이아웃 설계 - width, box-sizing, margin 등

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,44 @@
+/* 기본 글꼴 - 웹폰트 */
 html,body{
   font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
 }
+/* 박스 사이징 재정의 */
+*,*::before,*::after{
+  box-sizing:border-box;
+}
+
+/* 레이아웃 */
+.header,.visual,.main,.slogan,.footer-inner{
+  width: 940px;
+  margin: 0 auto;
+}
+
+/* 헤더 */
+.header{
+  background-color: yellow;
+  height: 10vh;
+}
+/* 비주얼 */
+.visual{
+  background-color: orange;
+  height: 10vh;
+}
+/* 메인콘텐츠 */
+.main{
+  background-color: blue;
+  height: 60vh;
+}
+/* 슬로건 */
+.slogan{
+  background-color: aqua;
+  height: 10vh;
+}
+/* 푸터 */
+.footer{
+  background-color: purple;
+  height: 10vh;
+}
+
 
 .logo{
   margin: 0;
