flex를 이용한 메인 콘텐츠 레이아웃

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,31 @@ html,body{
 .main{
   background-color: blue;
   height: 60vh;
+  display: flex;
+  flex-flow: row nowrap; 
+  justify-content: space-between;
+  padding: 30px;
+  /* flex-direction: row;
+  flex-wrap: nowrap; */
+}
+
+.group{
+
+}
+
+.group1{
+  background-color: pink;
+  width: 250px;
+}
+
+.group2{
+  background-color: lime;
+  width: 380px;
+}
+
+.group3{
+  background-color: salmon;
+  width: 190px;
 }
 /* 슬로건 */
 .slogan{
