float을 이용한 메인 콘텐츠 레이아웃

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,8 @@ html,body{
   height: 10vh;
 }
 /* 메인콘텐츠 */
-.main{
+/* flex를 활용한 메인콘텐츠 배치 */
+/* .main{
   background-color: blue;
   height: 60vh;
   display: flex;
@@ -32,11 +33,26 @@ html,body{
   justify-content: space-between;
   padding: 30px;
   /* flex-direction: row;
-  flex-wrap: nowrap; */
+  flex-wrap: nowrap; 
+} */
+
+/* float을 활용한 메인 콘텐츠 배치 */
+.main{
+  background-color: blue;
+  display: flow-root;
+  min-height: 450px;
+  padding: 30px 15px;
 }
 
-.group{
+/* .clearfix::after{
+  content: "";
+  display: block;
+  clear: both;
+} */
 
+.group{
+  margin: 0 15px;
+  float: left;
 }
 
 .group1{
@@ -53,6 +69,11 @@ html,body{
   background-color: salmon;
   width: 190px;
 }
+
+/* .clearfix{
+  clear: both;
+} */
+
 /* 슬로건 */
 .slogan{
   background-color: aqua;
