--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,9 @@ html{
 body{
   font-size : 1.4rem;
   color: #000;
+  /* background-color: #ccc; */
+  background:  url(./images/bg_flower.png) no-repeat 50% 0,
+  linear-gradient(to bottom, #ccc 0%, #eee 30%, #fff 60%, #fff 100%);
   background-color: #ccc;
 }
 /* 숨김 콘텐츠 */
@@ -209,9 +212,60 @@ a{
 
 
 /* 비주얼 */
+@keyframes moveEffect{
+  from{
+    font-size : 12px;
+    color : rgba(0,0,0,0);
+    /* margin: 0; */
+    /* padding: 0; */
+    transform: translate(0,0);
+  } /* 0% */ 
+  50%{}
+  to{
+    font-size : 24px;
+    color : rgba(0,0,0,1);
+    /* margin:75px 0 0 400px; */
+    /* padding:75px 0 0 400px; */
+    transform: translate(400px,75px);
+  } /* 100% */
+}
+@keyframes fadeEffect{
+  0%{opacity: 1;}
+  100%{opacity: 0;}
+}
+
 .visual{
   /* background-color: orange; */
-  height: 10vh;
+  height: 120px;
+  position: relative;
+}
+.visual::before, .visual::after{
+  content : "";
+  position:absolute;
+  top : 0;
+  left : 0;
+  width: 100%;
+  height: 100%;
+  animation : fadeEffect 2000ms infinite alternate;
+}
+
+.visual::before{
+  background: url(./images/ani_flower_01.png) no-repeat 0 -10px,
+              url(./images/ani_flower_02.png) no-repeat 600px 0;
+}
+.visual::after{
+  background: url(./images/ani_flower_03.png) no-repeat 300px 0,
+              url(./images/ani_flower_04.png) no-repeat 800px 0;
+  animation-delay: 1000ms;
+}
+.visual-text{
+  position: relative;
+  z-index: 10;
+  font-family : Georgia, 'Times New Roman', Times, serif;
+  animation-name : moveEffect;
+  animation-duration: 2000ms;
+  animation-fill-mode : forwards;
+  display: inline-block;
 }
 /* 메인콘텐츠 */
 /* flex를 활용한 메인콘텐츠 배치 */
@@ -232,6 +286,8 @@ a{
   display: flow-root;
   min-height: 450px;
   padding: 30px 15px;
+  background-color: white;
+  border-radius: 15px 15px 0 0;
 }
 
 /* .clearfix::after{
