--- a/css/main.css
+++ b/css/main.css
@@ -420,7 +420,7 @@ a{
 .term{
   border: 1px solid #aaa;
   border-radius: 5px;
-  background: #ccc linear-gradient(#aaa, #ccc);
+  background: #ccc linear-gradient(to bottom,#ccc, #eee);
   padding : 10px 15px;
   margin-top : 20px;
   display: flow-root;
@@ -468,7 +468,62 @@ a{
 .reverse .term-list-thumbnail{
   float : right;
 }
+/* 검색 폼 */
+.search-form{
+  border : 1px solid #aaa;
+  border-color : #aaa #aaa #fff #aaa;
+  border-radius: 15px 15px 0 0;
+  background: #ccc linear-gradient(#ccc, #eee);
+  padding : 15px 25px 10px;
+  /* display: flex; */
+  /* position : relative; */
+}
+.search-form fieldset{
+  margin: 0;
+  padding: 0;
+  border: 0;
+}
+.search-form-inner{
+  /* background-color: yellow; */
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.search-input{
+  /* background-color: pink; */
+  flex-grow: 1;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  width: 250px;
+}
 
+.search-form label{
+  flex-shrink: 0;
+  margin-right: 8px;
+}
+.search-form input{
+  flex-grow: 1;
+  border: 1px solid #aaa;
+  border-radius: 3px;
+  padding : 2px 10px;
+  height : 24px;
+  width: 0;
+  /* margin : 0 15px; */
+  appearance: none;
+}
+
+.button-search{
+  background-color: #000;
+  color : #fff;
+  border : 1px solid #aaa;
+  border-radius: 3px;
+  padding : 0 10px;
+  font-size : 1.3rem;
+  height: 24px;
+  margin-left: 8px;
+}
 /* 슬로건 */
 .slogan{
   /* background-color: aqua; */
