--- a/css/main.css
+++ b/css/main.css
@@ -616,13 +616,75 @@ a{
 }
 /* 새소식 */
 .news{
-  background-color: lightgreen;
+  /* background-color: lightgreen; */
   margin-top: 20px;
+  position: relative;
+}
+.news::before{
+  content: "";
+  position : absolute;
+  top : 35px;
+  left : 0;
+  width: 100%;
+  height : 1px;
+  background: #ccc linear-gradient(to right, #ccc, #fff);
 }
 .news-title{
   font-size : 1.5rem;
   margin : 0;
   color:#dd422a
+}
+.news-item-title::before{
+  content: "* ";
+}
+.news-link{
+  display: block;
+  /* background-color: yellow; */
+}
+.news-item{
+  /* background-color: pink; */
+  margin-top: 35px;
+  position: relative;
+  padding-left: 130px;
+  min-height: 110px;
+  /* display: flex; */
+  /* flex-flow: column nowrap; */
+  /* position: absolute; */
+}
+.news-item-title{
+  /* background-color: yellow; */
+  font-size : 1.4rem;
+  font-weight: 700;
+  margin : 0;
+}
+.news-item-date{
+  /* background-color:salmon; */
+}
+.news-item-brief{
+  /* background-color: blueviolet; */
+  margin : 10px 0 0 0;
+  line-height: 1.5;
+}
+.news-item-thumbnail{
+  margin: 0;
+  /* background-color: lightgreen; */
+  position : absolute;
+  top : 0;
+  left : 0;
+  text-align: center;
+}
+
+
+.news-item-thumbnail img{
+  padding-bottom: 15px;
+  box-shadow: 0 15px 15px 0 #ccc;
+}
+
+.news-more{
+  position: absolute;
+  top : -8px;
+  right : -8px;
+  padding : 8px;
 }
 /* 슬로건 */
 .slogan{
