--- a/css/main.css
+++ b/css/main.css
@@ -886,7 +886,46 @@ a{
 /* 슬로건 */
 .slogan{
   /* background-color: aqua; */
-  height: 10vh;
+  position: relative;
+  padding: 15px 80px 15px 180px;
+}
+
+.slogan-title{
+  /* background-color: pink; */
+  width: 110px;
+  height: 83px;
+  /* padding : 30px 0 0 30px; */
+  /* text-indent: 110px;
+  white-space: nowrap;
+  overflow: hidden; */
+  
+  position:absolute;
+  left:35px;
+  bottom: -25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.slogan-title::before{
+  content:"";
+  position: absolute;
+  top: 0;
+  left : 0;
+  width: 100%;
+  height: 100%;
+  background: url(./images/coffee.png) no-repeat;
+}
+.slogan-content{
+  color : #a09784;
+  margin: 0;
+}
+.slogan-content q::before{
+  font-size : 3rem;
+  display: inline-block;
+  transform: translateY(5px);
+}
+.slogan-content q::after{
+  content : "";
 }
 /* 푸터 */
 .footer{
